<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">


    <TextView
        android:id="@+id/txt_saludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/hola_usuario"
        android:textColor="?attr/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_user_profile"
        android:layout_width="35dp"
        android:layout_height="38dp"
        android:layout_marginEnd="28dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Configuración"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/baseline_settings_24"
        app:layout_constraintBottom_toBottomOf="@+id/txt_saludo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_saludo"
        app:layout_constraintVertical_bias="0.0"
        app:tint="?attr/colorPrimary" />

    <LinearLayout
        android:id="@+id/layout_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/txt_saludo"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_real_contactos"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/contactos_activos"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp"
            app:backgroundTint="?attr/colorSurface"
            app:cornerRadius="15dp"
            app:elevation="4dp"
            app:rippleColor="#4D4A148C" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ubicacion"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/gps_activo"
            android:textAllCaps="false"
            android:textColor="#2E7D32"
            android:textSize="14sp"
            app:backgroundTint="?attr/colorSurface"
            app:cornerRadius="15dp"
            app:elevation="4dp"
            app:rippleColor="#4D2E7D32" />

    </LinearLayout>


    <TextView
        android:id="@+id/txt_instruccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_instruccion"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sos_circular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sos_circular"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/sos"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:textStyle="bold"
        app:backgroundTint="#E91E63"
        app:cornerRadius="130dp"
        app:elevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sos_adjuntar"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:visibility="gone"
        app:backgroundTint="#69BF75"
        app:cornerRadius="130dp"
        app:elevation="12dp"
        app:icon="@drawable/outline_attach_file_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="40dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.758"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712" />

    <LinearLayout
        android:id="@+id/menu_inferior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/colorSurface"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mensaje"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/mensaje"
            android:textColor="?attr/colorPrimary"
            android:textSize="10sp"
            app:icon="@drawable/outline_attach_email_24"
            app:iconGravity="top"
            app:iconSize="28dp"
            app:iconTint="?attr/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_autoridades"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/autoridades"
            android:textColor="?attr/colorPrimary"
            android:textSize="10sp"
            app:icon="@drawable/outline_call_24"
            app:iconGravity="top"
            app:iconSize="28dp"
            app:iconTint="?attr/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_historial"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/historial"
            android:textSize="10sp"
            app:icon="@drawable/outline_acute_24"
            app:iconGravity="top"
            app:iconSize="28dp"
            app:iconTint="?attr/colorPrimary"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>